<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".CalculadoraImcActivity"
    android:background="@color/colorPrimaryDark">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/cvFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_man"
                app:tint="@color/white">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/str_hombre"
                android:textAllCaps="true"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvMale"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_woman"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/str_mujer"
                android:textAllCaps="true"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAltura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvMale"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="26dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_altura"
                android:textColor="@color/black"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Seleccione su altura"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200"
                app:thumbColor="@color/colorAccent"
                app:haloColor="@color/colorAccent"
                app:trackColorActive="@color/colorAccent"
                app:trackColorInactive="@color/colorAccentLight"
                app:tickColorActive="@color/colorAccent"
                app:tickColorInactive="@color/colorAccentClear"


                />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPeso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/cvAltura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cvEdad"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_peso"
                android:textColor="@color/black"
                android:textAllCaps="true"/>

            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="50 k"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabMenos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:backgroundTint="@color/colorAccent"
                    android:src="@drawable/ic_substract"
                    app:tint="@color/white">


                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabMas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorAccent"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEdad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/cvAltura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvPeso"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/colorPrimary">
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_edad"
                android:textAllCaps="true"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20 Años"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabMenosEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorAccent"
                    android:src="@drawable/ic_substract"
                    app:tint="@color/white"
                    android:layout_marginEnd="8dp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabMasEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorAccent"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
        


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/str_calcular"
        app:layout_constraintTop_toBottomOf="@+id/cvEdad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>